--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
     "dev": "ts-node-dev src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest --config jest.config.ts"
+    "test": "jest --config jest.config.ts",
+    "db:migrate": "npx sequelize db:migrate",
+    "db:seed": "npx sequelize db:seed:all",
+    "db:setup": "npm run db:migrate && npm run db:seed"
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.10",
